--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width">
 <meta property="og:title" content="Objektive" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://nthloop.github.com/Objektiv" />
+<meta property="og:url" content="https://github.com/Vorror/Objektiv" />
 <meta property="og:description" content="A Mac App that lets you switch your default browser with ease" />
 <meta property="og:image" content="http://www.nthloop.com/img/objektiv-small.jpg" />
 
@@ -23,7 +23,7 @@
 
     <h1>
       Objektiv
-      <small>v0.5</small>
+      <small>v0.6.3</small>
     </h1>
 
     <h2>
@@ -55,10 +55,10 @@
     </div>
 
     <div class="cta">
-      <a href="http://nthloop.com/objektiv/objektiv-latest.zip" class="download span4">
+      <a href="https://github.com/Vorror/Objektiv/releases" class="download span4">
         Download it now
       </a>
-      <a href="https://github.com/nthloop/Objektiv" class="fork span3">
+      <a href="https://github.com/Vorror/Objektiv" class="fork span3">
         Fork on Github
       </a>
     </div>
@@ -86,17 +86,10 @@
       <h2>
       <a name="copyright--about" class="anchor" href="#copyright--about"><span class="mini-icon mini-icon-link"></span></a>Copyright &amp; About</h2>
 
-      <p>We built Objektiv to scratch an itch we at <a href="http://nthloop.com">nth loop</a> were facing, and
-      to also learn all about developing Mac Apps. It's ridiculously
-      over-engineered for such a simple utility.</p>
-
       <p>Objektiv is available under the MIT License.</p>
 
       </div>
     </div>
-
-
-
   </div>
 
   <footer>
@@ -110,9 +103,6 @@
         <img src="images/parts/gnat-right.png" alt="">
       </div>
     </div>
-    <div class="copyright">
-      &copy; <a href="http://nthloop.com">nth loop</a>
-    </div>
   </footer>
 
 
@@ -125,18 +115,5 @@
   $(function() {
     $('#objektiv-slider').carousel();
   });
-</script>
-<script type="text/javascript">
-
- var _gaq = _gaq || [];
- _gaq.push(['_setAccount', 'UA-28889198-5']);
- _gaq.push(['_trackPageview']);
-
- (function() {
-   var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-   ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
- })();
-
 </script>
 </html>
